force-app/main/default/objects/Internal_Referral__c/Internal_Referral__c.object-meta.xml
<CustomObject>
    <label>Internal Referral</label>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>Internal Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>