force-app/main/default/objects/Internal_Referral__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Internal Referrals</relationshipLabel>
    <relationshipName>Internal_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>