force-app/main/default/objects/Internal_Referral__c/fields/Chiropractic_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Chiropractic_Therapy__c</fullName>
    <label>Chiropractic Therapy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Continue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>