force-app/main/default/objects/Internal_Referral__c/fields/Clinical_Detail_Record__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Detail_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Detail Record</label>
    <referenceTo>Clinical_Details__c</referenceTo>
    <relationshipLabel>Internal Referrals</relationshipLabel>
    <relationshipName>Internal_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>