force-app/main/default/objects/Internal_Referral__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Internal Referrals</relationshipLabel>
    <relationshipName>Internal_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>