force-app/main/default/objects/Internal_Referral__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attending Provider</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>