force-app/main/default/objects/Internal_Referral__c/fields/Reason_Referral_Not_Made__c.field-meta.xml
<CustomField>
    <fullName>Reason_Referral_Not_Made__c</fullName>
    <label>Reason Referral Not Made</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Declined</fullName>
            </value>
            <value>
                <fullName>Forgot</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>