force-app/main/default/objects/Internal_Referral__c/fields/Referral_Reason__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reason__c</fullName>
    <label>Referral Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>