force-app/main/default/objects/Internal_Referral__c/fields/Referring_Provider__c.field-meta.xml
<CustomField>
    <fullName>Referring_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Referred To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>