force-app/main/default/objects/Internal_Referral__c/fields/Visit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Visit_Reason__c</fullName>
    <label>Visit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>CHIRO</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>