force-app/main/default/objects/Internal_Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider__c</columns>
    <columns>Status__c</columns>
    <columns>Reason_Referral_Not_Made__c</columns>
    <columns>Appointment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>