force-app/main/default/objects/Internal_Referral__c/listViews/Open_Internal_Referrals.listView-meta.xml
<ListView>
    <fullName>Open_Internal_Referrals</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Open Internal Referrals</label>
</ListView>